[SCRIPT] Added ability to release a fork